modules/lib/dependencies/usrsctp/headers/usrsctp.h

typedef unsigned __int8  uint8_t;
typedef unsigned __int16 uint16_t;
typedef unsigned __int32 uint32_t;
union sctp_sockstore {
	struct sockaddr_in sin;
	struct sockaddr_in6 sin6;
	struct sockaddr_conn sconn;
	struct sockaddr sa;
};
struct sctp_rcvinfo {
	uint16_t rcv_sid;
	uint16_t rcv_ssn;
	uint16_t rcv_flags;
	uint32_t rcv_ppid;
	uint32_t rcv_tsn;
	uint32_t rcv_cumtsn;
	uint32_t rcv_context;
	sctp_assoc_t rcv_assoc_id;
};
/******************** System calls *************/

struct socket;
void
usrsctp_init(uint16_t,
             int (*)(void *addr, void *buffer, size_t length, uint8_t tos, uint8_t set_df),
             void (*)(const char *format));
void
usrsctp_init_nothreads(uint16_t,
		       int (*)(void *addr, void *buffer, size_t length, uint8_t tos, uint8_t set_df),
		       void (*)(const char *format));
struct socket *
usrsctp_socket(int domain, int type, int protocol,
               int (*receive_cb)(struct socket *sock, union sctp_sockstore addr, void *data,
                                 size_t datalen, struct sctp_rcvinfo, int flags, void *ulp_info),
               int (*send_cb)(struct socket *sock, uint32_t sb_free, void *ulp_info),
               uint32_t sb_threshold,
               void *ulp_info);
void
usrsctp_close(struct socket *so);
int
usrsctp_finish(void);
int
usrsctp_shutdown(struct socket *so, int how);
void
usrsctp_conninput(void *, const void *, size_t, uint8_t);
int
usrsctp_set_non_blocking(struct socket *, int);
void
usrsctp_register_address(void *);
void
usrsctp_deregister_address(void *);
int
usrsctp_set_ulpinfo(struct socket *, void *);
int
usrsctp_set_upcall(struct socket *so,
                   void (*upcall)(struct socket *, void *, int),
                   void *arg);