modules/lib/src/main/java/com/github/auties00/cobalt/call/transport/sctp/bindings/UsrSctp.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void usrsctp_close(struct socket *so)
     * }
     */
    public static FunctionDescriptor usrsctp_close$descriptor() {
        return usrsctp_close.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void usrsctp_close(struct socket *so)
     * }
     */
    public static MethodHandle usrsctp_close$handle() {
        return usrsctp_close.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void usrsctp_close(struct socket *so)
     * }
     */
    public static MemorySegment usrsctp_close$address() {
        return usrsctp_close.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void usrsctp_close(struct socket *so)
     * }
     */
    public static void usrsctp_close(MemorySegment so) {
        var mh$ = usrsctp_close.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_close", so);
            }
            mh$.invokeExact(so);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_finish {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            UsrSctp.C_INT    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_finish");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int usrsctp_finish()
     * }
     */
    public static FunctionDescriptor usrsctp_finish$descriptor() {
        return usrsctp_finish.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int usrsctp_finish()
     * }
     */
    public static MethodHandle usrsctp_finish$handle() {
        return usrsctp_finish.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int usrsctp_finish()
     * }
     */
    public static MemorySegment usrsctp_finish$address() {
        return usrsctp_finish.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int usrsctp_finish()
     * }
     */
    public static int usrsctp_finish() {
        var mh$ = usrsctp_finish.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_finish");
            }
            return (int)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_shutdown {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            UsrSctp.C_INT,
            UsrSctp.C_POINTER,
            UsrSctp.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_shutdown");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int usrsctp_shutdown(struct socket *so, int how)
     * }
     */
    public static FunctionDescriptor usrsctp_shutdown$descriptor() {
        return usrsctp_shutdown.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int usrsctp_shutdown(struct socket *so, int how)
     * }
     */
    public static MethodHandle usrsctp_shutdown$handle() {
        return usrsctp_shutdown.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int usrsctp_shutdown(struct socket *so, int how)
     * }
     */
    public static MemorySegment usrsctp_shutdown$address() {
        return usrsctp_shutdown.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int usrsctp_shutdown(struct socket *so, int how)
     * }
     */
    public static int usrsctp_shutdown(MemorySegment so, int how) {
        var mh$ = usrsctp_shutdown.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_shutdown", so, how);
            }
            return (int)mh$.invokeExact(so, how);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_conninput {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER,
            UsrSctp.C_LONG_LONG,
            UsrSctp.C_CHAR
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_conninput");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void usrsctp_conninput(void *, const void *, size_t, uint8_t)
     * }
     */
    public static FunctionDescriptor usrsctp_conninput$descriptor() {
        return usrsctp_conninput.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void usrsctp_conninput(void *, const void *, size_t, uint8_t)
     * }
     */
    public static MethodHandle usrsctp_conninput$handle() {
        return usrsctp_conninput.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void usrsctp_conninput(void *, const void *, size_t, uint8_t)
     * }
     */
    public static MemorySegment usrsctp_conninput$address() {
        return usrsctp_conninput.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void usrsctp_conninput(void *, const void *, size_t, uint8_t)
     * }
     */
    public static void usrsctp_conninput(MemorySegment x0, MemorySegment x1, long x2, byte x3) {
        var mh$ = usrsctp_conninput.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_conninput", x0, x1, x2, x3);
            }
            mh$.invokeExact(x0, x1, x2, x3);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_set_non_blocking {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            UsrSctp.C_INT,
            UsrSctp.C_POINTER,
            UsrSctp.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_set_non_blocking");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int usrsctp_set_non_blocking(struct socket *, int)
     * }
     */
    public static FunctionDescriptor usrsctp_set_non_blocking$descriptor() {
        return usrsctp_set_non_blocking.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int usrsctp_set_non_blocking(struct socket *, int)
     * }
     */
    public static MethodHandle usrsctp_set_non_blocking$handle() {
        return usrsctp_set_non_blocking.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int usrsctp_set_non_blocking(struct socket *, int)
     * }
     */
    public static MemorySegment usrsctp_set_non_blocking$address() {
        return usrsctp_set_non_blocking.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int usrsctp_set_non_blocking(struct socket *, int)
     * }
     */
    public static int usrsctp_set_non_blocking(MemorySegment x0, int x1) {
        var mh$ = usrsctp_set_non_blocking.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_set_non_blocking", x0, x1);
            }
            return (int)mh$.invokeExact(x0, x1);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_register_address {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            UsrSctp.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_register_address");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void usrsctp_register_address(void *)
     * }
     */
    public static FunctionDescriptor usrsctp_register_address$descriptor() {
        return usrsctp_register_address.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void usrsctp_register_address(void *)
     * }
     */
    public static MethodHandle usrsctp_register_address$handle() {
        return usrsctp_register_address.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void usrsctp_register_address(void *)
     * }
     */
    public static MemorySegment usrsctp_register_address$address() {
        return usrsctp_register_address.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void usrsctp_register_address(void *)
     * }
     */
    public static void usrsctp_register_address(MemorySegment x0) {
        var mh$ = usrsctp_register_address.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_register_address", x0);
            }
            mh$.invokeExact(x0);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_deregister_address {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            UsrSctp.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_deregister_address");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void usrsctp_deregister_address(void *)
     * }
     */
    public static FunctionDescriptor usrsctp_deregister_address$descriptor() {
        return usrsctp_deregister_address.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void usrsctp_deregister_address(void *)
     * }
     */
    public static MethodHandle usrsctp_deregister_address$handle() {
        return usrsctp_deregister_address.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void usrsctp_deregister_address(void *)
     * }
     */
    public static MemorySegment usrsctp_deregister_address$address() {
        return usrsctp_deregister_address.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void usrsctp_deregister_address(void *)
     * }
     */
    public static void usrsctp_deregister_address(MemorySegment x0) {
        var mh$ = usrsctp_deregister_address.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_deregister_address", x0);
            }
            mh$.invokeExact(x0);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_set_ulpinfo {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            UsrSctp.C_INT,
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_set_ulpinfo");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
